--- a/Final_proyect/src/frontend/create_account.html
+++ b/Final_proyect/src/frontend/create_account.html
@@ -36,7 +36,7 @@
             <p>&copy; 2024 Bmazon</p>
         </footer>
         
-        <script src="script.js"></script>
+        <script src="script_login.js"></script>
 
 
 
