--- a/Final_proyect/src/frontend/home.html
+++ b/Final_proyect/src/frontend/home.html
@@ -25,7 +25,7 @@
             </div>
             
             <div class="user_options">
-                <img src="user_icon.png" alt="User Icon" class="user_icon">
+                <img src="usericon.jpg" alt="User Icon" class="user_icon">
                 <button id="logout_button">Logout</button>
             </div>
            
