--- a/Final_proyect/src/frontend/product1.html
+++ b/Final_proyect/src/frontend/product1.html
@@ -19,7 +19,7 @@
             <button id="shoppingcar_button">Shopping car</button>
         </div>
         <div class="user_options">
-            <img src="user_icon.png" alt="User Icon" class="user_icon">
+            <img src="usericon.jpg" alt="User Icon" class="user_icon">
             <button id="logout_button">Logout</button>
         </div>
     </header>
