--- a/Final_proyect/src/frontend/home.html
+++ b/Final_proyect/src/frontend/home.html
@@ -10,7 +10,7 @@
     </head>
     
 
-    <body>
+    <body id="home-body" >
 
         <header class = "header_container">
             <h1 class = "page_name">Bmazon</h1>
@@ -20,8 +20,8 @@
                 <button id="search_button">Search</button>
             </div> 
 
-            <div class = "shopping_car" >
-                <button id="shoppingcar_button">Shopping car</button>
+            <div class = "shopping_cart" >
+                <button id="shoppingcart_button">Shopping cart</button>
             </div>
             
             <div class="user_options">
@@ -39,7 +39,7 @@
             <nav class = "menu">
                 <h1 class = "section_menu"> Menu </h1>
                 <ul>
-                    <li><a href="electronics.html">Electronics</a></li>
+                    <li><a href="electronics.html" >Electronics</a></li>
                     <li><a href="fashion.html">Fashion</a></li>
                     <li><a href="sportfitness.html">Sport and fitness</a></li>
                     <li><a href="homekitchen.html">Home and kitchen</a></li>
