--- a/Final_proyect/src/frontend/product1.html
+++ b/Final_proyect/src/frontend/product1.html
@@ -14,9 +14,9 @@
             <input type="text" id="search_input" placeholder="Search a product">
             <button id="search_button">Search</button>
         </div>
-
-        <div class = "shopping_car" >
-            <button id="shoppingcar_button">Shopping car</button>
+        
+        <div class = "shopping_cart" >
+            <button id="shoppingcart_button">Shopping cart</button>
         </div>
         <div class="user_options">
             <img src="usericon.jpg" alt="User Icon" class="user_icon">
