--- a/Final_proyect/src/frontend/electronics.html
+++ b/Final_proyect/src/frontend/electronics.html
@@ -6,11 +6,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="This is a website from a web store">
         <title>Electronics</title>
-        <link rel="stylesheet" href="styles_shoppingcar.css">
+        <link rel="stylesheet" href="styles_shoppingcart.css">
     </head>
 
 
-    <body>
+    <body id="electronics_body">
 
         <header class = "header_container">
             <h1 class = "page_name">Bmazon</h1>
@@ -20,8 +20,8 @@
                 <button id="search_button">Search</button>
             </div> 
 
-            <div class = "shopping_car" >
-                <button id="shoppingcar_button">Shopping car</button>
+            <div class = "shopping_cart" >
+                <button id="shoppingcart_button">Shopping cart</button>
             </div>
             
             <div class="user_options">
